@@ -10,10 +10,15 @@ BUGS
 
 Dragging a pinboard icon doesn't remove the tooltip.
 
+When the minibuffer is highlighted in red, scanning more items should recheck.
+
+Selecting a region and then clicking to the right of it leaves a dot.
+
+Return in an action window without an entry should still activate the
+default.
+
 
 FEATURES FOR 1.3
-
-Make invalid pathnames go red instead of beeping.
 
 Put Disk Usage in the Info box.
 
